Agregando info a index.html

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Bienvenidos a mi Empresa</h1>
+    <h4>Todo para su Hogar</h4>
     <script src="assets/js/scripts.js"></script>
     
 </body>
