3. Modelo de Cajas

--- a/index.html
+++ b/index.html
@@ -4,13 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Empresa</title>
-
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="landing/assets/css/styles.css">
 </head>
 <body>
-    <h1>Bienvenidos a mi Empresa</h1>
-    <h4>Todo para su Hogar</h4>
-    <script src="assets/js/scripts.js"></script>
-    
+    <div class="contenedor">
+        <nav>
+            <div class="borde logo">Logo</div>
+            <div class="borde menu">Menú</div>
+            <div class="borde ingreso">Ingreso</div>
+        </nav>
+        <header class="borde">Encabezado</header>
+        <div class="borde titulo">Portafolio</div>
+        <section class="portafolio">
+            <div class="borde port-izq">col1</div>
+            <div class="borde port-cnt">col2</div>
+            <div class="borde port-der">col3</div>
+        </section>
+        <div class="borde titulo"></div>
+        <section class="borde nosotros"></section>
+        <div class="borde titulo"></div>
+        <section class="borde contacto"></section>
+        <footer class="borde"></footer>
+    </div>
+    <script src="assets/js/scripts.js"></script>    
 </body>
 </html>         
