3. Modelo de Cajas

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="contenedor">
-        <nav>
+        <nav class="">
             <div class="borde logo">Logo</div>
             <div class="borde menu">Menú</div>
             <div class="borde ingreso">Ingreso</div>
